// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.add > functionality > debt is added - auto-accepted by the counterparty 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('3424ffbe-bc14-40fb-8e8d-7d2c68121b4e', '717ebb74-e1d8-49a9-942e-c563dc983b51', '6681fb0d-8f49-4d42-b639-12931004de48', 'MUR', -678.4300, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'modi adipisci tempore', '2020-01-01 00:00:00', '63c30bc1-acda-410a-868d-9bb9fdf197c2');
+ INSERT INTO public.debts VALUES ('3424ffbe-bc14-40fb-8e8d-7d2c68121b4e', '02592c5a-d836-40e8-9345-b251bdda0526', '060ccc77-ab57-45d8-bf83-e0a7782b8f59', 'MUR', 678.4300, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'modi adipisci tempore', '2020-01-01 00:00:00', '63c30bc1-acda-410a-868d-9bb9fdf197c2');"
`;

exports[`debts.add > functionality > debt is added - autogenerated timestamp 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('3822d983-4931-4cdd-84b2-e56572e673de', '978a586b-2e6f-4b46-902a-27b7e7256a8e', 'bfef6080-fcdc-4510-b87b-f2c9e8f66494', 'CLP', -844.9400, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'perspiciatis quaerat numquam', '2020-01-01 00:00:00', NULL);"
`;

exports[`debts.add > functionality > debt is added - user-provided timestamp 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('5bd149f9-691d-43ee-961f-24c72f0417ed', '30ccee93-5420-4e8c-8d2b-615f9ef7e6f2', 'e9df21fd-d28b-46b7-a610-53eba21fef39', 'UYU', -853.1600, '2021-01-01 00:00:00', '2020-01-01 00:00:00', 'velit doloremque cum', '2020-01-01 00:00:00', NULL);"
`;
